--- a/Lettery.dproj
+++ b/Lettery.dproj
@@ -6,7 +6,7 @@
         <MainSource>Lettery.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Android</Platform>
+        <Platform Condition="'$(Platform)'==''">Android64</Platform>
         <TargetedPlatforms>37907</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
