memory error in GuessWhat fixed. | Animation to start button added | Animation to 4 buttons added

--- a/Lettery.dproj
+++ b/Lettery.dproj
@@ -971,6 +971,13 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="Android\Rus5Word.ngm" Configuration="Debug" Class="File">
+                    <Platform Name="Android64">
+                        <RemoteDir>.\assets\internal\</RemoteDir>
+                        <RemoteName>Rus5Word.ngm</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="Eng5Mean.txt" Configuration="Debug" Class="File">
                     <Platform Name="OSX64">
                         <RemoteDir>Contents\MacOS\</RemoteDir>
@@ -1253,13 +1260,6 @@
                 </DeployFile>
                 <DeployFile LocalName="temp\dicts\Rus5Word.ngm" Configuration="Debug" Class="File">
                     <Platform Name="Android">
-                        <RemoteDir>.\assets\internal\</RemoteDir>
-                        <RemoteName>Rus5Word.ngm</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
-                <DeployFile LocalName="temp\dicts\Rus5Word.ngm" Configuration="Debug" Class="File">
-                    <Platform Name="Android64">
                         <RemoteDir>.\assets\internal\</RemoteDir>
                         <RemoteName>Rus5Word.ngm</RemoteName>
                         <Overwrite>true</Overwrite>
